--- a/DEW/UT04-02/style.css
+++ b/DEW/UT04-02/style.css
@@ -38,17 +38,20 @@ input[type="password"]:required,
 input[type="tel"]:required, 
 textarea:required {
     border: 2px solid red;
+    height: fit-content;
 }
 
 input[type="text"]:invalid, 
 input[type="password"]:invalid, 
 input[type="tel"]:invalid, 
 textarea:invalid {
-    border: red solid 2px;
+    border: 2px red solid ;
+    height: fit-content;
 }
 
 input[type="text"]:valid, input[type="password"]:valid, input[type="tel"]:valid, textarea:valid{
     border: 2px solid green;
+    height: fit-content;
 }
 .contador{
     margin-top: -0.2em;
@@ -69,4 +72,7 @@ hr{
     margin-top: -0.4rem;
     height: 2px;
     background-color: black;
+}
+#Descripcion{
+    resize: none;
 }
